<TableRow
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/resultrow_effects_row"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="#b3b3b3" android:layout_margin="1dip">
    <TextView
            android:id="@+id/resultrow_effects_crop_column"
            android:padding="5dp"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:text="@string/title_crop"
            android:layout_weight="0.38"
            android:gravity="center_vertical"
            android:background="#e6e6e6" android:layout_margin="1dip"/>
    <TextView
            android:id="@+id/resultrow_effects_yield_column"
            android:padding="5dp"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:text="@string/title_yield_increase"
            android:layout_weight="0.3"
            android:gravity="center_vertical|center_horizontal"
            android:background="#e6e6e6" android:layout_margin="1dip"/>
    <TextView
            android:id="@+id/resultrow_effects_returns_column"
            android:padding="5dp"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:text="@string/title_net_returns"
            android:layout_weight="0.32"
            android:gravity="center_vertical|center_horizontal"
            android:background="#e6e6e6" android:layout_margin="1dip"/>
</TableRow>