<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <TextView
                android:id="@+id/results_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="left"
                android:text="@string/results_title"
                style="@style/labels_bold"/>
        <TableLayout
                android:id="@+id/table_crop_feertilzer_ration"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/results_header"
                android:layout_marginTop="5dip">
            <TableRow
                    android:id="@+id/results_row_header_ratios"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/header_crop"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:layout_marginLeft="5dip"
                        android:text="@string/title_crop"
                        style="@style/table_header_bg"/>
                <TextView
                        android:id="@+id/header_fertilizer"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:layout_marginLeft="5dip"
                        android:text="@string/title_fertilizer"
                        style="@style/table_header_bg"/>
                <TextView
                        android:id="@+id/header_rate"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:layout_marginLeft="5dip"
                        style="@style/table_header_bg"
                        android:text="@string/header_crop_fertilizer_ratio"/>

            </TableRow>
            <!--the rest of the content for this are added dynamically-->
        </TableLayout>

        <TextView
                android:id="@+id/header_fertilizer_total"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/table_crop_feertilzer_ration"
                android:layout_alignLeft="@id/table_crop_feertilzer_ration"
                android:layout_marginTop="9dip"
                android:layout_marginLeft="5dip"
                android:gravity="left"
                style="@style/italics_label"
                android:text="@string/results_label_total_fertilizer"/>
        <TableLayout
                android:id="@+id/table_fertilizer_totals"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_below="@id/header_fertilizer_total"
                android:layout_marginLeft="5dip">
            <!--totals will be dynamically added here-->
        </TableLayout>

        <TextView
                android:id="@+id/header_effects_per_acre"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/table_fertilizer_totals"
                android:layout_alignLeft="@id/table_fertilizer_totals"
                android:layout_marginTop="15dip"
                android:gravity="left"
                style="@style/labels_bold"
                android:text="@string/results_label_expected_averages"/>

        <TableLayout
                android:id="@+id/table_expected_effects"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_below="@id/header_effects_per_acre"
                android:layout_marginTop="5dip">
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:padding="5dp"
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:text="@string/title_crop"
                        android:layout_weight="0.38"
                        style="@style/table_header_bg"
                        android:gravity="center_vertical"/>
                <TextView
                        android:padding="5dp"
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:text="@string/title_yield_increase"
                        android:layout_weight="0.3"
                        style="@style/table_header_bg"
                        android:gravity="center_vertical|center_horizontal"/>
                <TextView
                        android:padding="5dp"
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:text="@string/title_net_returns"
                        android:layout_weight="0.32"
                        style="@style/table_header_bg"
                        android:gravity="center_vertical|center_horizontal"/>
            </TableRow>
        </TableLayout>

        <TextView
                android:id="@+id/label_returns_to_investiment"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/table_expected_effects"
                android:layout_marginTop="17dip"
                android:layout_centerHorizontal="true"
                style="@style/labels_bold"
                android:text="@string/results_label_net_returns"/>

        <TextView
                android:id="@+id/lbl_total_net_returns_on_investiment"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/label_returns_to_investiment"
                android:layout_marginTop="12dip"
                android:layout_centerHorizontal="true"
                style="@style/labels_bold"
                android:text="000,000"/>

        <TextView
                android:id="@+id/lbl_user_input_header"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/lbl_total_net_returns_on_investiment"
                android:layout_marginTop="30dip"
                android:layout_centerHorizontal="true"
                style="@style/labels_bold"
                android:text="@string/title_user_input"/>

        <!-- ================================================================= -->

        <TableLayout android:id="@+id/table_crops"
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:layout_below="@id/lbl_user_input_header"
                     android:layout_marginTop="5dip">

            <TableRow android:id="@+id/table_crops_header"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="#b3b3b3"
                      android:layout_marginTop="1dip"
                      android:layout_marginLeft="1dip"
                      android:layout_marginRight="1dip">

                <TextView android:padding="5dp"
                          android:id="@+id/table_coulumn1"
                          android:layout_width="0px"
                          android:layout_height="match_parent"
                          android:text="@string/title_crop"
                          android:layout_weight="0.3"
                          style="@style/table_header_bg"
                          android:gravity="center_vertical"/>

                <TextView android:padding="5dp"
                          android:id="@+id/textView1"
                          android:layout_width="0px"
                          android:layout_height="match_parent"
                          android:text="@string/title_landsize"
                          android:layout_weight="0.3"
                          style="@style/table_header_bg"
                          android:gravity="center_vertical|center_horizontal"/>
                <TextView android:padding="5dp"
                          android:id="@+id/textView1"
                          android:layout_width="0px"
                          android:layout_height="match_parent"
                          android:text="@string/title_profitkgs"
                          android:layout_weight="0.4"
                          style="@style/table_header_bg"
                          android:gravity="center_vertical|center_horizontal"/>

            </TableRow>

            <!-- dynamically generated -->
        </TableLayout>

        <TableLayout android:id="@+id/table_fertilisers"
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:layout_below="@id/table_crops"
                     android:layout_marginTop="5dip">

            <TableRow android:id="@+id/table_fertiliser_header"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="#b3b3b3"
                      android:layout_marginTop="1dip"
                      android:layout_marginLeft="1dip"
                      android:layout_marginRight="1dip">

                <!--<TextView android:padding="5dp"-->
                          <!--android:id="@+id/table_coulumn1"-->
                          <!--android:layout_width="0px"-->
                          <!--android:layout_height="match_parent"-->
                          <!--android:text="@string/title_crop"-->
                          <!--android:layout_weight="0.3"-->
                          <!--style="@style/table_header_bg"-->
                          <!--android:gravity="center_vertical"/>-->

                <TextView android:padding="5dp"
                          android:id="@+id/textView1"
                          android:layout_width="0px"
                          android:layout_height="match_parent"
                          android:text="@string/title_fertilizer"
                          android:layout_weight="0.4"
                          style="@style/table_header_bg"
                          android:gravity="center_vertical|center_horizontal"/>
                <TextView android:padding="5dp"
                          android:id="@+id/textView1"
                          android:layout_width="0px"
                          android:layout_height="match_parent"
                          android:text="@string/title_price_per_bag"
                          android:layout_weight="0.3"
                          style="@style/table_header_bg"
                          android:gravity="center_vertical|center_horizontal"/>

            </TableRow>

            <!-- dynamically generated -->
        </TableLayout>

        <TextView
                android:id="@+id/lbl_input_amount_available"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/table_fertilisers"
                android:layout_marginTop="10dip"
                android:layout_centerHorizontal="true"
                style="@style/labels_bold"/>

    </RelativeLayout>

</ScrollView>